<resources>
    <string name="app_name">Safaricom</string>
    <string name="title_activity_main">Safaricom</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--button titles-->
    <string name="safcom">Safaricom+</string>
    <string name="mpesa">Mpesa</string>
    <string name="send_money">Send money</string>
    <string name="withdraw_cash">Withdraw Cash</string>
    <string name="buy_airtime">Buy airtime</string>
    <string name="m_shwari">M-Shwari</string>
    <string name="lipa_na_mpesa">Lipa na M-PESA</string>
    <string name="my_acc">My account</string>
    <string name="search_sim_contacts">Search SIM Contacts</string>
    <string name="enter_phone_no">Enter phone no.</string>
    <string name="btn_text_ok">OK</string>

    <!--activity names-->
    <string name="title_activity_phone_no">Enter Phone No</string>
    <string name="title_activity_agent_no">Enter Agent No</string>

    <!--EditText hints-->
    <string name="hint_phone_no">Digits (0-9,*,#,+) 0-20</string>
    <string name="hint_amount">Digits (0-9,*,#,+) 0-8</string>
    <string name="hint_pin">Digits (0-9,*,#,+) 4</string>
    <string name="hint_agent_no">Digits (0-9,*,#,+) 4-12</string>

    <!--TV Titles-->
    <string name="title_phone_no">Enter phone no.</string>
    <string name="title_amount">Enter amount</string>
    <string name="title_pin">Enter M-PESA PIN</string>
    <string name="title_agent">Enter agent no.</string>

    <!--Activity Titles -->
    <string name="fragment.main">Safaricom</string>
    <string name="fragment.mpesa">MPESA</string>
    <string name="fragment.buy.airtime">Buy Airtime</string>
    <string name="fragment.lipa.na.mpesa">Lipa na MPESA</string>
    <string name="fragment.mshwari">M-Shwari</string>
    <string name="fragment.my.account">My Account</string>
    <string name="fragment.send.money">Send Money</string>
    <string name="fragment.withdraw.cash">Withdraw Cash</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
